# violet_streamdeck

./: .gitignore  .gitmodules  README.md  pyproject.toml  violetdeck.yaml
systemd/: tmux_start.sh  vsdlib.service
violet_streamdeck/: layouts.py  utils.py  violetdeck.py  widgets.py
